--- a/src/styles/pages/About.scss
+++ b/src/styles/pages/About.scss
@@ -1,5 +1,56 @@
+@import "../_variables.scss";
+
 .about {
-  min-height: 100vh;
+  padding: 100px 0;
   display: flex;
-  align-items: center;
+
+  &__header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    cursor: default;
+
+    h2 {
+      padding: 0 20px;
+    }
+    &-border {
+      width: 100%;
+      height: 12px;
+      background-color: var(--primary);
+      width: 12px;
+      border-radius: 50%;
+      transform: translateY(-17px);
+
+      &--animation {
+        animation: bounce 0.6s ease-out forwards;
+      }
+    }
+  }
+}
+
+@keyframes bounce {
+  33% {
+    transform: translateY(-14px);
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+  }
+  60% {
+    transform: translateY(-30px);
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+  }
+  80% {
+    transform: translateY(-12px);
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+  }
+  100% {
+    transform: translateY(0px);
+    width: 100%;
+    height: 12px;
+    border-radius: 0%;
+  }
 }
