--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
+  padding: 0 50px;
   min-height: 100vh;
   background-color: var(--bg);
   color: var(--text);
