--- a/src/styles/ThemeToggle.scss
+++ b/src/styles/ThemeToggle.scss
@@ -1,9 +1,9 @@
 @import "_variables.scss";
 
 .theme-toggle {
-  position: absolute;
-  top: 25px;
-  right: 25px;
+  position: fixed;
+  top: 15px;
+  right: 15px;
   width: 30px;
   height: 30px;
   border: 0;
