--- a/src/styles/pages/Stack.scss
+++ b/src/styles/pages/Stack.scss
@@ -12,7 +12,6 @@
     display: block;
     margin: 5px;
     padding: 5px;
-    min-width: 200px;
   }
   &__header {
     display: flex;
@@ -23,6 +22,11 @@
       padding: 0 40px;
       text-align: center;
       border-bottom: 10px solid var(--secondary);
+
+      & span {
+        font-size: 2rem;
+        color: var(--primary);
+      }
     }
   }
 
