Add more global variables

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -8,6 +8,8 @@
   --secondary: hsl(200, 100%, 35%);
   --secondary-opacity: hsla(200, 100%, 50%, 0.2);
   --box-shadow: 0 3px 5px hsla(0, 0%, 0%, 0.3);
+  --inset-1: inset 1px 1px 3px 0 hsl(0, 0%, 80%);
+  --inset-2: inset -8px -8px 8px 0 hsl(0, 0%, 98%);
 }
 
 .dark {
@@ -20,5 +22,6 @@
   --secondary: hsl(200, 100%, 60%);
   --secondary-opacity: hsla(200, 100%, 50%, 0.2);
   --box-shadow: 0 3px 10px hsla(0, 0%, 0%, 0.5);
-  --img-filter: brightness(80%);
+  --inset-1: inset 1px 1px 3px 0 hsl(200, 20%, 5%);
+  --inset-2: inset -4px -4px 8px 0 hsl(200, 25%, 10.8%);
 }
