Add minor styling changes

--- a/src/styles/pages/Hello.scss
+++ b/src/styles/pages/Hello.scss
@@ -6,20 +6,21 @@
   align-items: center;
 
   &__wrapper {
-    margin: 50px 0;
+    margin: 80px 0 50px 0;
     opacity: 0;
     animation: fade-in 0.8s ease-in forwards;
     animation-delay: 0.3s;
 
     h1 {
       padding: 20px 10px;
-      font-weight: 400;
+      font-weight: lighter;
       font-size: 2rem;
-      letter-spacing: -2px;
+      letter-spacing: 2px;
       text-align: center;
 
       span:nth-of-type(even) {
         color: var(--primary);
+        font-size: 3rem;
       }
 
       span:nth-of-type(5) {
