--- a/src/styles/pages/Stack.scss
+++ b/src/styles/pages/Stack.scss
@@ -16,18 +16,7 @@
   &__header {
     display: flex;
     justify-content: center;
-    margin-bottom: 20px;
-
-    h3 {
-      padding: 0 40px;
-      text-align: center;
-      border-bottom: 10px solid var(--secondary);
-
-      & span {
-        font-size: 2rem;
-        color: var(--primary);
-      }
-    }
+    margin-bottom: 40px;
   }
 
   &__list {
@@ -36,6 +25,6 @@
   }
 
   &__item {
-    margin: 4px 10px;
+    margin: 0px 10px 20px 10px;
   }
 }
