--- a/src/styles/Logo.scss
+++ b/src/styles/Logo.scss
@@ -1,10 +1,10 @@
-@import "_variables.scss";
+@import '_variables.scss';
 
 .logo {
   position: absolute;
   top: 5px;
   left: 15px;
-  font-family: "Raleway";
+  font-family: 'Raleway';
   font-weight: bold;
   display: flex;
   align-items: center;
