--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,7 +1,7 @@
 @font-face {
-  font-family: "Raleway";
+  font-family: 'Raleway';
   font-style: normal;
   font-weight: 200;
-  src: local(""), url("../fonts/raleway-v17-latin-200.woff2") format("woff2");
+  src: local(''), url('../fonts/raleway-v17-latin-200.woff2') format('woff2');
   font-display: swap;
 }
