--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -1,7 +1,7 @@
-@import "_variables.scss";
+@import '_variables.scss';
 
 .header {
-  font-family: "Raleway";
+  font-family: 'Raleway';
   position: relative;
   padding: 0 20px;
   height: 40px;
