Change font to extended

--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -2,6 +2,7 @@
   font-family: 'Raleway';
   font-style: normal;
   font-weight: 200;
-  src: local(''), url('../fonts/raleway-v17-latin-200.woff2') format('woff2');
+  src: local(''),
+    url('../fonts/raleway-v17-latin-ext-200.woff2') format('woff2');
   font-display: swap;
 }
