--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,11 +1,12 @@
 @import '_variables.scss';
+@import '_mobile.scss';
 
 .app {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
-  padding: 0 50px;
+  padding: 0 1rem;
   min-height: 100vh;
   background-color: var(--bg);
   color: var(--text);
